These little control segments shouldn't be using any of the console monitoring or other magic stuff we do. The logging is generally ignored in these cases, so the process of using it just generates noise.
Risk: Medium
Visibility: No more console logging during these little mini-scripts.

Signed-off-by: John Admanski <jadmanski@google.com>

--- a/server/control_segments/install
+++ b/server/control_segments/install
@@ -3,7 +3,8 @@ def install(machine):
                                                  ssh_port, ssh_pass)
 
     host = hosts.create_host(hostname, user=user, port=port,
-                             initialize=False, password=passwd)
+                             initialize=False, password=passwd,
+                             auto_monitor=False)
     host.machine_install()
 
 job.parallel_simple(install, machines, log=False)
