Fix formatting of control_segments/*
Signed-off-by: Martin J. Bligh <mbligh@google.com>



git-svn-id: svn://test.kernel.org/autotest/trunk@2494 592f7852-d20e-0410-864c-8624ca9c26a4

--- a/server/control_segments/install
+++ b/server/control_segments/install
@@ -1,10 +1,9 @@
 def install(machine):
     hostname, user, passwd, port = parse_machine(machine, ssh_user,
                                                  ssh_port, ssh_pass)
-
-    host = hosts.create_host(hostname, user=user, port=port,
-                             initialize=False, password=passwd,
-                             auto_monitor=False)
+    host = hosts.create_host(hostname, user=user, port=port, initialize=False,
+                             password=passwd, auto_monitor=False)
     host.machine_install()
+
 
 job.parallel_simple(install, machines, log=False)
